--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>237907804029-dfl8frc1mif5oamo96b5ec7cre9o4ral.apps.googleusercontent.com</string>
+	<string>237907804029-qe5jl61bjiaeh5pk692qa5qbgnuac837.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.237907804029-dfl8frc1mif5oamo96b5ec7cre9o4ral</string>
+	<string>com.googleusercontent.apps.237907804029-qe5jl61bjiaeh5pk692qa5qbgnuac837</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBLaKO_eUaTfCWbLKXCmbfJP5Zof1nE6wo</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.socialDex.RunnerTests</string>
+	<string>com.social-dex.app.RunnerTests</string>
 	<key>PROJECT_ID</key>
 	<string>social-dex-6c9e8</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:237907804029:ios:e2d63b437451dfde4cd614</string>
+	<string>1:237907804029:ios:332c5da567bbab104cd614</string>
 </dict>
 </plist>
