--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.7.0
   build_runner: ^2.4.5
+  flutter_holo_date_picker: ^1.1.0
 
   firebase_core: ^2.13.1
   cloud_firestore: ^4.8.0
