--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,7 +41,6 @@ dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.7.0
   build_runner: ^2.4.5
-  flutter_holo_date_picker: ^1.1.0
 
   firebase_core: ^2.13.1
   cloud_firestore: ^4.8.0
@@ -61,7 +62,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
