--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   json_annotation: ^4.8.1
   json_serializable: ^6.7.0
   build_runner: ^2.4.5
+  url_launcher: ^6.1.11
 
   firebase_core: ^2.13.1
   cloud_firestore: ^4.8.0
