--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   json_serializable: ^6.7.0
   build_runner: ^2.4.5
   url_launcher: ^6.1.11
+  loader_overlay: ^2.2.0
 
   firebase_core: ^2.13.1
   cloud_firestore: ^4.8.0
