--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   url_launcher: ^6.1.11
   loader_overlay: ^2.2.0
 
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+  geolocator: ^9.0.2
+
   firebase_core: ^2.13.1
   cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.2
