--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   provider: ^6.0.5
   rxdart: ^0.27.7
 
+  age_calculator: ^1.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
