--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   build_runner: ^2.4.5
   url_launcher: ^6.1.11
   loader_overlay: ^2.2.0
+  fluttertoast: ^8.2.2
 
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
