--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,10 +47,17 @@
 		<true/>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
+
+
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>This app needs access to location when in the background.</string>
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string>This app needs access to location when open.</string>
-		<key>NSLocationAlwaysUsageDescription</key>
-		<string>This app needs access to location when in the background.</string>
+		<key>UIBackgroundModes</key>
+		<array>
+		<string>location</string>
+		</array>
+
 		<key>UIStatusBarHidden</key>
 		<false/>
 	</dict>
