--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Social-Dex",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#07224f",
+    "theme_color": "#07224f",
     "description": "Don't miss Reality",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
